# machine-learning-model

./: Dockerfile  Makefile  README.md  config.toml  generate_sample.py  predict.py  pyproject.toml  train.py
.github/workflows/: ci.yml
spam_detector/: config.py  data.py  evaluation.py  model.py  preprocessing.py
tests/: test_config.py  test_model.py  test_preprocessing.py
