[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spam_detector"
version = "0.1.0"
description = "A machine learning model for spam email detection"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "nltk>=3.6.0",
    "pytest>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=21.5b2",
    "flake8>=3.9.0",
    "isort>=5.9.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]
